--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+	 <link
+      rel="shortcut icon"
+      href="https://seeklogo.com/images/B/blogger-icon-logo-93FC9A4806-seeklogo.com.png"
+      type="image/x-icon"
+    />
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
