--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+<!-- 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
 	 <link
       rel="shortcut icon"
       href="https://seeklogo.com/images/B/blogger-icon-logo-93FC9A4806-seeklogo.com.png"
